# hermes-llm-routing

./: README.md  SBOM.json  pyproject.toml
skills/llm-routing/: SKILL.md
src/hermes_llm_routing/: __init__.py  config.py  plugin.py
src/llm_routing/: cloud_tier.py  llm_pipeline.py
tests/: test_smoke.py
