[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-llm-routing"
version = "1.0.0"
description = "LLM T1/T2/HEDGE routing (3 layers, parallel) para hermes-agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Will Zapprosite" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "hermes-agent>=0.16.0",
  "httpx>=0.27",
  "openai>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.entry-points."hermes_agent.plugins"]
hermes_llm_routing = "hermes_llm_routing.plugin:llmroutingPlugin"

[tool.setuptools.packages.find]
where = ["src"]
